xmldiff (0.6.10-1) unstable; urgency=low

  * Apply Daiki Ueno patch: fails when comparing minimal trees on i386 (closes: #570727)
  * Acknowledge NMU (closes: #570727, #547860)

 -- Alain Leufroy <alain.leufroy@logilab.fr>  Fri, 27 Aug 2010 10:21:46 +0200

xmldiff (0.6.9-1) unstable; urgency=low

  * Fix a bug : xmldiff-xmlrev compilation error  (closes: #484768)

 -- Graziella Toutoungis <graziella.toutoungis@logilab.fr>  Fri, 03 Apr 2009 10:41:19 +0200

xmldiff (0.6.8-4.2) unstable; urgency=low

  * Non-maintainer upload.
  * Fix id() calculation in extensions/maplookup.c; that fixes comparison
    errors on minimal trees (on i386). Patch by Daiki Ueno, applied
    upstream (see http://www.logilab.org/ticket/21853). (Closes: #570727)

 -- Stefano Zacchiroli <zack@debian.org>  Thu, 18 Mar 2010 11:14:40 +0100

xmldiff (0.6.8-4.1) unstable; urgency=low

  * Non-maintainer upload.
  * debian/rules:
    + Conditionally use $(py_setup_install_args) from python.mk and remove
      unneeded files from dist-packages as well to enable building with
      Python 2.6. (Closes: #547860)
  * Standards Version is now 3.8.3 (no changes needed).

 -- Kumar Appaiah <akumar@debian.org>  Mon, 19 Oct 2009 22:21:57 -0500

xmldiff (0.6.8-4) unstable; urgency=low

  * Fixed __future__ import (closes: #476161)
  * dropped mentions of python2.3-xmldiff which no longer exists in stable
  * updated to new standards
  * fixed encoding of debian/copyright

 -- Alexandre Fayolle <afayolle@debian.org>  Thu, 17 Apr 2008 15:18:10 +0200

xmldiff (0.6.8-3) unstable; urgency=low

  * Fixed package description (closes: #383788, #420781)
  * converted changelog and manpages to UTF-8

 -- Alexandre Fayolle <afayolle@debian.org>  Fri, 11 May 2007 10:53:50 +0200

xmldiff (0.6.8-2) unstable; urgency=low

  * updated standards to 3.7.2
  * use debhelper 5
  * new python policy

 -- Alexandre Fayolle <afayolle@debian.org>  Thu, 15 Jun 2006 08:47:44 +0200

xmldiff (0.6.8-1) unstable; urgency=low
